@@ -6,6 +6,7 @@
  * Side Public License, v 1.
  */
 
+import org.elasticsearch.gradle.util.Pair
 import org.elasticsearch.gradle.internal.info.BuildParams
 import org.jetbrains.gradle.ext.JUnit
 
@@ -21,56 +22,79 @@ allprojects {
   }
 }
 
-tasks.register('configureIdeCheckstyle') {
-  group = 'ide'
-  description = 'Generated a suitable checkstyle config for IDEs'
-
-  String checkstyleConfig = 'build-tools-internal/src/main/resources/checkstyle.xml'
-  String checkstyleSuppressions = 'build-tools-internal/src/main/resources/checkstyle_suppressions.xml'
-  String checkstyleIdeFragment = 'build-tools-internal/src/main/resources/checkstyle_ide_fragment.xml'
-  String checkstyleIdeConfig = "$rootDir/checkstyle_ide.xml"
-
-  inputs.files(file(checkstyleConfig), file(checkstyleIdeFragment))
-  outputs.files(file(checkstyleIdeConfig))
-
-  doLast {
-    // Create an IDE-specific checkstyle config by first copying the standard config
-    Files.copy(
-      Paths.get(file(checkstyleConfig).getPath()),
-      Paths.get(file(checkstyleIdeConfig).getPath()),
-      StandardCopyOption.REPLACE_EXISTING
-    )
-
-    // There are some rules that we only want to enable in an IDE. These
-    // are extracted to a separate file, and merged into the IDE-specific
-    // Checkstyle config.
-    Node xmlFragment = parseXml(checkstyleIdeFragment)
-
-    // Edit the copy so that IntelliJ can copy with it
-    modifyXml(checkstyleIdeConfig, { xml ->
-      // Add all the nodes from the fragment file
-      Node treeWalker = xml.module.find { it.'@name' == 'TreeWalker' }
-      xmlFragment.module.each { treeWalker.append(it) }
-
-      // Change the checkstyle config to inline the path to the
-      // suppressions config. This removes a configuration step when using
-      // the checkstyle config in an IDE.
-      Node suppressions = xml.module.find { it.'@name' == 'SuppressionFilter' }
-      suppressions.property.findAll { it.'@name' == 'file' }.each { it.'@value' = checkstyleSuppressions }
-    },
-      "<!DOCTYPE module PUBLIC\n" +
-      "  \"-//Puppy Crawl//DTD Check Configuration 1.3//EN\"\n" +
-      "  \"http://www.puppycrawl.com/dtds/configuration_1_3.dtd\">\n" +
-      "<!-- Generated automatically from the following - do not edit this file directly. -->\n" +
-      "<!--     ${checkstyleConfig} -->\n" +
-      "<!--     ${checkstyleIdeFragment} -->\n"
-    )
-  }
-}
-
 // Applying this stuff, particularly the idea-ext plugin, has a cost so avoid it unless we're running in the IDE
 if (providers.systemProperty('idea.active').getOrNull() == 'true') {
   project.apply(plugin: org.jetbrains.gradle.ext.IdeaExtPlugin)
+
+  def elasticsearchProject = locateElasticsearchWorkspace(gradle)
+
+  tasks.register('configureIdeCheckstyle') {
+    group = 'ide'
+    description = 'Generated a suitable checkstyle config for IDEs'
+
+    String resources = "${elasticsearchProject.left()}/build-tools-internal/src/main/resources"
+    String buildConventionsJar = "${elasticsearchProject.left()}/build-conventions/build/libs/build-conventions.jar"
+    String checkstyleConfig = "${resources}/checkstyle.xml"
+    String checkstyleSuppressions = "${resources}/checkstyle_suppressions.xml"
+    String checkstyleIdeFragment = "${resources}/checkstyle_ide_fragment.xml"
+    String checkstyleIdeConfig = "${rootDir}/checkstyle_ide.xml"
+
+    String checkstylePluginConfigTemplate = "${resources}/checkstyle-idea.xml"
+    String checkstylePluginConfig = "${rootDir}/.idea/checkstyle-idea.xml"
+
+    inputs.files(
+      file(checkstyleConfig),
+      file(checkstyleIdeFragment),
+      file(checkstylePluginConfigTemplate)
+    )
+    outputs.files(
+      file(checkstyleIdeConfig),
+      file(checkstylePluginConfig)
+    )
+
+    doLast {
+      // Configure the IntelliJ Checkstyle plugin by copying a standard file. We don't simply commit
+      // the result to version control, because the plugin has a habit of modifying the file and
+      // replacing the `$PROJECT_DIR$` placeholders, which developers must then revert.
+      project.copy {
+        from(checkstylePluginConfigTemplate)
+        into("${rootDir}/.idea")
+        expand(jarLocation: buildConventionsJar, configLocation: checkstyleIdeConfig)
+      }
+
+      // Create an IDE-specific checkstyle config by first copying the standard config
+      Files.copy(
+        Paths.get(file(checkstyleConfig).getPath()),
+        Paths.get(file(checkstyleIdeConfig).getPath()),
+        StandardCopyOption.REPLACE_EXISTING
+      )
+
+      // There are some rules that we only want to enable in an IDE. These
+      // are extracted to a separate file, and merged into the IDE-specific
+      // Checkstyle config.
+      Node xmlFragment = parseXml(checkstyleIdeFragment)
+
+      // Edit the copy so that IntelliJ can copy with it
+      modifyXml(checkstyleIdeConfig, { xml ->
+        // Add all the nodes from the fragment file
+        Node treeWalker = xml.module.find { it.'@name' == 'TreeWalker' }
+        xmlFragment.module.each { treeWalker.append(it) }
+
+        // Change the checkstyle config to inline the path to the
+        // suppressions config. This removes a configuration step when using
+        // the checkstyle config in an IDE.
+        Node suppressions = xml.module.find { it.'@name' == 'SuppressionFilter' }
+        suppressions.property.findAll { it.'@name' == 'file' }.each { it.'@value' = checkstyleSuppressions }
+      },
+        "<!DOCTYPE module PUBLIC\n" +
+          "  \"-//Puppy Crawl//DTD Check Configuration 1.3//EN\"\n" +
+          "  \"http://www.puppycrawl.com/dtds/configuration_1_3.dtd\">\n" +
+          "<!-- Generated automatically from the following - do not edit this file directly. -->\n" +
+          "<!--     ${checkstyleConfig} -->\n" +
+          "<!--     ${checkstyleIdeFragment} -->\n"
+      )
+    }
+  }
 
   tasks.register('configureIdeaGradleJvm') {
     group = 'ide'
@@ -88,9 +112,11 @@ if (providers.systemProperty('idea.active').getOrNull() == 'true') {
   tasks.register('buildDependencyArtifacts') {
     group = 'ide'
     description = 'Builds artifacts needed as dependency for IDE modules'
-    dependsOn ':client:rest-high-level:shadowJar',
+    dependsOn([':client:rest-high-level:shadowJar',
       ':plugins:repository-hdfs:hadoop-client-api:shadowJar',
-      ':libs:elasticsearch-x-content:generateProviderImpl'
+      ':libs:elasticsearch-x-content:generateProviderImpl',
+      ':server:generateModulesList',
+      ':server:generatePluginsList'].collect { elasticsearchProject.right()?.task(it) ?: it })
   }
 
   idea {
@@ -122,10 +148,12 @@ if (providers.systemProperty('idea.active').getOrNull() == 'true') {
           defaults(JUnit) {
             vmParameters = [
               '-ea',
+              '-Djava.security.manager=allow',
               '-Djava.locale.providers=SPI,COMPAT',
               // TODO: only open these for mockito when it is modularized
               '--add-opens=java.base/java.security.cert=ALL-UNNAMED',
               '--add-opens=java.base/java.nio.channels=ALL-UNNAMED',
+              '--add-opens=java.base/java.io=ALL-UNNAMED',
               '--add-opens=java.base/java.net=ALL-UNNAMED',
               '--add-opens=java.base/javax.net.ssl=ALL-UNNAMED',
               '--add-opens=java.base/java.nio.file=ALL-UNNAMED',
@@ -215,4 +243,22 @@ Node parseXml(Object path) {
   xmlParser.setFeature("http://apache.org/xml/features/nonvalidating/load-external-dtd", false)
   Node xml = xmlParser.parse(xmlFile)
   return xml
+}
+
+Pair<File, IncludedBuild> locateElasticsearchWorkspace(Gradle gradle) {
+  if (gradle.parent == null) {
+    // See if any of these included builds is the Elasticsearch gradle
+    for (IncludedBuild includedBuild : gradle.includedBuilds) {
+      File versionProperties = new File(includedBuild.projectDir, 'build-tools-internal/version.properties')
+      if (versionProperties.exists()) {
+        return Pair.of(includedBuild.projectDir, includedBuild)
+      }
+    }
+
+    // Otherwise assume this gradle is the root elasticsearch workspace
+    return Pair.of(gradle.getRootProject().getRootDir(), null)
+  } else {
+    // We're an included build, so keep looking
+    return locateElasticsearchWorkspace(gradle.parent)
+  }
 }
